<resources>
    <string name="app_name">WhatsAppClone</string>
    <string name="digiteseunomehint">Digite seu nome</string>
    <string name="logo">logo</string>
    <string name="codPais">+55</string>
    <string name="ddd">11</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="telefonehint">999999999</string>
    <string name="msg_validacao">Você recebeu um SMS para validação do seu número, digite o código de validação abaixo:</string>
    <string name="validar">Validar</string>
</resources>
