<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.candido.arllain.whatsappclone.activity.LoginActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="163dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:hint="@string/digiteseunomehint"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/editCodPais"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/codPais"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNome"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/editCodArea"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="9dp"
        android:layout_marginStart="9dp"
        android:ems="10"
        android:hint="@string/ddd"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/editCodPais"
        app:layout_constraintLeft_toRightOf="@+id/editCodPais"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <EditText
        android:id="@+id/editTelefone"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:hint="@string/telefonehint"
        android:inputType="number"
        android:textColor="@android:color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/editCodArea"
        app:layout_constraintLeft_toRightOf="@+id/editCodArea"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/btCadastrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/cadastrar"
        app:layout_constraintLeft_toLeftOf="@+id/editNome"
        app:layout_constraintRight_toRightOf="@+id/editNome"
        app:layout_constraintTop_toBottomOf="@+id/editCodPais"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />
</android.support.constraint.ConstraintLayout>
